[gd_scene load_steps=6 format=3 uid="uid://dwildj6237bj0"]

[ext_resource type="Script" uid="uid://bmd8wvtth3bvj" path="res://scenes/game/game.gd" id="1_7h61r"]
[ext_resource type="PackedScene" uid="uid://b23scp362ek7x" path="res://scenes/player/player.tscn" id="1_sul5r"]
[ext_resource type="PackedScene" uid="uid://dvflcr0ijqkso" path="res://scenes/score/score.tscn" id="3_0sr1o"]
[ext_resource type="AudioStream" uid="uid://cje2510mxw7ea" path="res://assets/sfx/die.mp3" id="4_kelw5"]
[ext_resource type="Script" uid="uid://dllyte3fr7toj" path="res://scenes/ambience/ambience.gd" id="5_lfrn8"]

[node name="Game" type="Node2D"]
script = ExtResource("1_7h61r")

[node name="Background" type="ColorRect" parent="."]
z_index = -10
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1152.0
offset_top = -651.0
offset_right = 1152.0
offset_bottom = 645.0
grow_horizontal = 2
grow_vertical = 2

[node name="Player" parent="." instance=ExtResource("1_sul5r")]
position = Vector2(-40, 0)

[node name="Score" parent="." instance=ExtResource("3_0sr1o")]
position = Vector2(81, -45)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_kelw5")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Message" type="Sprite2D" parent="."]
z_index = 2
texture_filter = 1
scale = Vector2(0.5, 0.5)

[node name="AmbienceManager" type="Node2D" parent="."]
script = ExtResource("5_lfrn8")

[connection signal="restart" from="." to="Player" method="_on_game_restart"]
[connection signal="restart" from="." to="Score" method="_on_game_restart"]
[connection signal="body_entered" from="Player" to="." method="_on_player_body_entered"]
[connection signal="night" from="Score" to="." method="_on_score_night"]
[connection signal="night" from="Score" to="AmbienceManager" method="_on_score_night"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer" to="AmbienceManager" method="_on_timer_timeout"]
